# higher-web-practice-markdown-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  main.cpp  readme.html  run.sh  run_tests.sh
converter/: CMakeLists.txt  inline_parser.cpp  inline_parser.h  renderer.cpp  renderer.h  scanner.cpp  scanner.h  utils.cpp  utils.h
examples/: input.md
tests/: expected.html  test_main.cpp  tests.md
